--- a/myQbox/Home.html
+++ b/myQbox/Home.html
@@ -8,13 +8,13 @@
     <body>
         <nav class="topnav">
             <div class = "list">
-                <a href="#" class="list"><img src="/image/List_button.png" width="50"></a> 
+                <a href="#" class="list"><img src="image/List_button.png" width="50"></a>
             </div>
             <div class = "logo">
-                <a href="/Home.html"><img src="/image/Home_button.png"></a>
+                <a href="/Home.html"><img src="image/Home_button.png"></a>
             </div>
             <div class = "login_out">
-                <a href="/QboxHome.html"><img src="/image/Logout.png"></a>
+                <a href="/QboxHome.html"><img src="image/Logout.png"></a>
             </div>
         </nav>
         <div id="sitebody">
@@ -23,11 +23,11 @@
             </form>
             <div class="content">
                 <ul>
-                    <li class="vote1"><a href="/RespnseVote.html"><img src="/image/Vote 1.png"></a></li>
-                    <li class="short1"><a href="/ResponseShort.html"><img src="/image/Short-answer Question 1.png"></a></li>
-                    <li class="vote2"><img src="/image/Vote 2.png"></li>
-                    <li class="short2"><img src="/image/Short-answer Question 2.png"></li>
-                    <li class="vote3"><img src="/image/Vote 3.png"></li>
+                    <li class="vote1"><a href="RespnseVote.html"><img src="image/Vote 1.png"></a></li>
+                    <li class="short1"><a href="ResponseShort.html"><img src="image/Short-answer Question 1.png"></a></li>
+                    <li class="vote2"><img src="image/Vote 2.png"></li>
+                    <li class="short2"><img src="image/Short-answer Question 2.png"></li>
+                    <li class="vote3"><img src="image/Vote 3.png"></li>
                 </ul>
             </div>
         </div>
