--- a/myQbox/LogIn.html
+++ b/myQbox/LogIn.html
@@ -8,15 +8,15 @@
     <body>
         <nav class="topnav">
             <div class = "list">
-                <a href="#" class="list"><img src="/image/List_button.png" width="50"></a> 
+                <a href="#" class="list"><img src="image/List_button.png" width="50"></a>
             </div>
             <div class = "logo">
-                <a href="/QboxHome.html"><img src="/image/Home_button.png" width="100%"></a>
+                <a href="QboxHome.html"><img src="image/Home_button.png" width="100%"></a>
             </div>
         </nav>
         <div id="sitebody">
             <div class="content">
-                <div class="logbg"><img src="/image/LogIn.png" width="65%"></div>
+                <div class="logbg"><img src="image/LogIn.png" width="65%"></div>
             </div>
             
         </div>
