--- a/myQbox/CreateAccount.html
+++ b/myQbox/CreateAccount.html
@@ -8,16 +8,16 @@
     <body>
         <nav class="topnav">
             <div class = "list">
-                <a href="#" class="list"><img src="/image/List_button.png" width="50"></a> 
+                <a href="#" class="list"><img src="image/List_button.png" width="50"></a>
             </div>
             <div class = "logo">
-                <a href="/QboxHome.html"><img src="/image/Home_button.png"></a>
+                <a href="QboxHome.html"><img src="image/Home_button.png"></a>
             </div>
         </nav>
         <div id="sitebody">
             <div class="content">
                 <div class="Qboximg">
-                    <img src="/image/QBox.png">
+                    <img src="image/QBox.png">
                 </div>
                 <div class="Qboxdata">
                     <img src="image/contant.png">
