--- a/myQbox/CreateVote.html
+++ b/myQbox/CreateVote.html
@@ -8,13 +8,13 @@
     <body>
         <nav class="topnav">
             <div class = "list">
-                <a href="#" class="list"><img src="/image/List_button.png" width="50"></a> 
+                <a href="#" class="list"><img src="image/List_button.png" width="50"></a>
             </div>
             <div class = "logo">
-                <a href="/Home.html"><img src="/image/Home_button.png"></a>
+                <a href="Home.html"><img src="image/Home_button.png"></a>
             </div>
             <div class = "login_out">
-                <a href="/QboxHome.html"><img src="/image/Logout.png"></a>
+                <a href="QboxHome.html"><img src="image/Logout.png"></a>
             </div>
         </nav>
         <div id="sitebody">
