--- a/myQbox/ResponseShort.html
+++ b/myQbox/ResponseShort.html
@@ -8,13 +8,13 @@
     <body>
         <nav class="topnav">
             <div class = "list">
-                <a href="#" class="list"><img src="/image/List_button.png" width="50"></a> 
+                <a href="#" class="list"><img src="image/List_button.png" width="50"></a>
             </div>
             <div class = "logo">
-                <a href="/Home.html"><img src="/image/Home_button.png"></a>
+                <a href="Home.html"><img src="image/Home_button.png"></a>
             </div>
             <div class = "login_out">
-                <a href="/QboxHome.html"><img src="/image/Logout.png"></a>
+                <a href="QboxHome.html"><img src="image/Logout.png"></a>
             </div>
         </nav>
         <div id="sitebody">
@@ -22,7 +22,7 @@
                 <input class="search" type="text" name="q" placeholder=" Search" style="border-color: #003B71;">
             </form>
             <div class="content">
-                <div class="R_short_answer"><img src="/image/ShortQuestion.png" width="1000"></div>
+                <div class="R_short_answer"><img src="image/ShortQuestion.png" width="1000"></div>
             </div>
         </div>
     </body>
