--- a/myQbox/ResponseShort.html
+++ b/myQbox/ResponseShort.html
@@ -8,13 +8,13 @@
     <body>
         <nav class="topnav">
             <div class = "list">
-                <a href="#" class="list"><img src="/image/List_button.png" width="50"></a> 
+                <a href="#" class="list"><img src="image/List_button.png" width="50"></a> 
             </div>
             <div class = "logo">
-                <a href="/Home.html"><img src="/image/Home_button.png"></a>
+                <a href="Home.html"><img src="image/Home_button.png"></a>
             </div>
             <div class = "login_out">
-                <a href="/QboxHome.html"><img src="/image/Logout.png"></a>
+                <a href="QboxHome.html"><img src="image/Logout.png"></a>
             </div>
         </nav>
         <div id="sitebody">
@@ -22,7 +22,38 @@
                 <input class="search" type="text" name="q" placeholder=" Search" style="border-color: #003B71;">
             </form>
             <div class="content">
-                <div class="R_short_answer"><img src="/image/ShortQuestion.png" width="1000"></div>
+                <div class="R_short_answer"><img src="image/ShortQuestion.png" width="1000"></div>
+                <form method="POST">
+                    <input class="response_box" type="text">
+                </form>
+                <form method="POST">
+                    <input type="button" value="send" onclick="javascript:window.alert('Success to response a Qbox!'); location.href='Home.html';"style="color: #43618F; background: #93B0DB; border: 0px; border-radius: 10px; width: 50px; height: 30px; margin-top: 680px; margin-left: 935px;">
+                </form>
+                
+                <input type="checkbox" name="" id="sideMenu-active">
+                <div class="sideMenu" style="margin-top: -61%;">
+                    <div class = "list">
+                        <label for="sideMenu-active">
+                            <img src="image/List_button.png" style="width: 50px">
+                        </label>
+                    </div>
+                    <nav>
+                        <div><a href="#" class="_settings"><img src="image/menu_setting.png" style="width: 18%"> Settings</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 25px;"></div>
+                        <div><a href="Personal.html" class="_mypage"><img src="image/menu_mypage.png" style="width: 16%"> My Page</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="CreateVote.html" class="_vote"><img src="image/menu_vote.png" style="width: 13%"> Create Vote</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="CreateShort.html" class="_talk"><img src="image/menu_talk.png" style="width: 14%"> Create Talk</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="#" class="_history"><img src="image/menu_history.png" style="width: 19%"> History</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="#" class="_notifiction"><img src="image/menu_notifiction.png" style="width: 15%"> Notifiction</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="#" class="_help"><img src="image/menu_help.png" style="width: 20%"> Help</a></div>
+                    </nav>
+                    
+                </div>
             </div>
         </div>
     </body>
