--- a/myQbox/ResponseShort.html
+++ b/myQbox/ResponseShort.html
@@ -19,16 +19,16 @@
                 <input class="search" type="text" name="q" placeholder=" Search" style="border-color: #003B71;">
             </form>
             <div class="content">
-                <div class="R_short_answer"><img src="image/ShortQuestion.png" width="1000"></div>
+                <div class="R_short_answer"><img src="image/ShortQuestion.png" style="height: 35Vh;margin-top: -3%; margin-left: 30%;"></div>
                 <form method="POST">
-                    <input class="response_box" type="text">
+                    <textarea class="response_box"></textarea>
                 </form>
                 <form method="POST">
-                    <input type="button" value="send" onclick="javascript:window.alert('Success to response a Qbox!'); location.href='Home.html';"style="color: #43618F; background: #93B0DB; border: 0px; border-radius: 10px; width: 50px; height: 30px; margin-top: 680px; margin-left: 935px;">
+                    <input type="button" value="send" onclick="javascript:window.alert('Success to response a Qbox!'); location.href='Home.html';"style="color: #43618F; background: #93B0DB; border: 0px; border-radius: 10px; width: 50px; height: 30px; margin-top: 37%; margin-left: 45%;">
                 </form>
                 
                 <input type="checkbox" name="" id="sideMenu-active">
-                <div class="sideMenu" style="margin-top: -61%;">
+                <div class="sideMenu" style="margin-top: -39.55%;">
                     <div class = "list">
                         <label for="sideMenu-active">
                             <img src="image/List_button.png" style="width: 50px">
