--- a/myQbox/CreateVote.html
+++ b/myQbox/CreateVote.html
@@ -7,9 +7,6 @@
     
     <body>
         <nav class="topnav">
-            <div class = "list">
-                <a href="#" class="list"><img src="image/List_button.png" width="50"></a>
-            </div>
             <div class = "logo">
                 <a href="Home.html"><img src="image/Home_button.png"></a>
             </div>
@@ -21,7 +18,62 @@
             <form method="POST">
                 <input class="search" type="text" name="q" placeholder=" Search" style="border-color: #003B71;">
             </form>
-            <div class="content"></div>
+            <div class="content">
+                
+
+                <div class="vbox_out">
+                    <style>
+                        input::placeholder{
+                            color: #735F36;
+                            font-size: 2rem;
+                        }
+                        .create_opt1,
+                        .create_opt2{
+                            width: 30vw;
+                            height: 10vh;
+                            font-size: 2.5rem;
+                            color: #5C5C5C;
+                            background: #FFF4DF;
+                            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+                            border: 0px;
+                            border-radius: 100px;
+                        }
+                    </style>
+                    <div style="margin-left: -60%; margin-top: 5%;font-size: 3rem; color: #735F36;">Create a Vote...</div>
+                    <form method="POST">
+                        <input class="create_opt1" type="text" placeholder=" (a) option1" style="margin-top: 7%;">
+                    </form>
+                    <form method="POST">
+                        <input class="create_opt2" type="text" placeholder=" (b) option2" style="margin-top: 2%;">
+                    </form>
+                    <form method="POST">
+                        <input type="button" value="Add" onclick="javascript:window.alert('Success!'); location.href='Home.html';" style="width: 5vw; padding-top: 1rem;padding-bottom: 1rem;margin-top: 3%; margin-left: 70%;background: #DBC392; border-radius: 100px;border: 0px; color: #635842;box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">
+                    </form>
+                </div>
+                <input type="checkbox" name="" id="sideMenu-active">
+                <div class="sideMenu">
+                    <div class = "list">
+                        <label for="sideMenu-active">
+                            <img src="image/List_button.png" style="width: 50px">
+                        </label>
+                    </div>
+                    <nav>
+                        <div><a href="#" class="_settings"><img src="image/menu_setting.png" style="width: 18%"> Settings</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 25px;"></div>
+                        <div><a href="Personal.html" class="_mypage"><img src="image/menu_mypage.png" style="width: 16%"> My Page</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="CreateVote.html" class="_vote"><img src="image/menu_vote.png" style="width: 13%"> Create Vote</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="CreateShort.html" class="_talk"><img src="image/menu_talk.png" style="width: 14%"> Create Talk</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="#" class="_history"><img src="image/menu_history.png" style="width: 19%"> History</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="#" class="_notifiction"><img src="image/menu_notifiction.png" style="width: 15%"> Notifiction</a></div>
+                        <div style="background: #FFF4DF; height: 2px; width: 25rem; margin-left: 1vw; margin-top: 70px;"></div>
+                        <div><a href="#" class="_help"><img src="image/menu_help.png" style="width: 20%"> Help</a></div>
+                    </nav>
+                </div>
+            </div>
         </div>
     </body>
 </html>
