--- a/myQbox/ResponseVote.html
+++ b/myQbox/ResponseVote.html
@@ -4,7 +4,7 @@
         <title>Qbox!</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css">
     </head>
-    
+    <meta charset="utf-8">
     <body>
         <nav class="topnav">
             <div class = "logo">
